--- a/_02-10_emotion_child.qmd
+++ b/_02-10_emotion_child.qmd
@@ -1,39 +1,79 @@
-## Emotional/Behavioral/Personality {#sec-emotion}
+## Behavioral/Emotional/Social
 
 ```{r}
 #| label: setup-emotion
 #| include: false
-# domain
+
+# filter by domain
 domains <- c(
-  "Psychiatric Disorders", "Personality Disorders", "Substance Use",
-  "Psychosocial Problems", "Behavioral/Emotional/Social", "Emotional/Behavioral/Personality"
+  "Psychiatric Disorders",
+  "Personality Disorders",
+  "Substance Use",
+  "Psychosocial Problems",
+  "Behavioral/Emotional/Social",
+  "Emotional/Behavioral/Personality"
 )
-# phenotype
+
+# Target phenotype
 pheno <- "emotion"
 ```
 
 ```{r}
 #| label: export-emotion
 #| include: false
-emotion <- readr::read_csv("neurobehav.csv") |>
-  dplyr::filter(domain %in% domains) |>
-  dplyr::filter(!is.na(z_mean_domain)) |>
+
+# Read the CSV file into a data frame
+emotion <- readr::read_csv("neurobehav.csv")
+
+# Filter the data frame to keep only rows where 'domain' equals 'domains'
+emotion <- emotion |> dplyr::filter(domain == domains)
+
+# Select specific columns from the data frame
+emotion <- emotion |>
   dplyr::select(
-    scale, score, z, percentile, range, test_name, domain, subdomain, narrow,
-    pass, verbal, timed, description, result, z_mean_domain, z_sd_domain,
+    test,
+    test_name,
+    scale,
+    raw_score,
+    score,
+    ci_95,
+    percentile,
+    range,
+    domain,
+    subdomain,
+    narrow,
+    pass,
+    verbal,
+    timed,
+    description,
+    result,
+    z,
+    z_mean_domain,
+    z_sd_domain,
     z_mean_subdomain,
-    z_sd_subdomain, z_mean_narrow, z_sd_narrow, z_mean_pass, z_sd_pass,
-    z_mean_verbal, z_sd_verbal, z_mean_timed, z_sd_timed
+    z_sd_subdomain,
+    z_mean_narrow,
+    z_sd_narrow
   )
-readr::write_csv(emotion, paste0(pheno, ".csv"))
+
+# Write the resulting data frame to a new CSV file
+# The file name is created by concatenating the 'pheno' variable and ".csv"
+# NA values are replaced with an empty string in the output file
+# Column names are included in the output file
+# If the file already exists, it is overwritten (not appended)
+readr::write_excel_csv(emotion, paste0(pheno, ".csv"), na = "", col_names = TRUE, append = FALSE)
 ```
 
 ```{r}
 #| label: data-emotion
 #| include: false
 
-data <- bwu::read_data(pheno = pheno)
+# Read the data using the read_data function from the bwu library
+# The phenotype is specified by the 'pheno' variable
+data <- emotion
+
 scales <- c(
+  # PAI
   "Activity Level",
   "Affective (A)",
   "Affective (D)",
@@ -85,8 +125,10 @@ scales <- c(
   "Treatment Rejection",
   "Verbal Aggression",
   "Warmth",
+  # Beck
   "BAI Total Score",
   "BDI-2 Total Score",
+  # BASC-3
   "Activities of Daily Living",
   "Adaptability",
   "Adaptive Skills",
@@ -101,7 +143,7 @@ scales <- c(
   "Depression",
   "Emotional Symptoms Index",
   "Externalizing Problems",
-  "Functional Communication",
+  "Functional Communication"
   "Hyperactivity",
   "Inattention/Hyperactivity",
   "Internalizing Problems",
@@ -120,88 +162,52 @@ scales <- c(
   "Somatization",
   "Withdrawal"
 )
-data_emotion <-
-  bwu::filter_data(
-    data,
-    domain = domains,
-    scale = scales
-  )
+
+# Filter the data using the filter_data function from the bwu library
+# The domain is specified by the 'domains' variable
+# The scale is specified by the 'scales' variable
+data_emotion <- bwu::filter_data(data, domain = domains, scale = scales)
 ```
 
 ```{r}
-#| label: text-emotion
+#| label: text-emotion-parent
 #| cache: true
 #| include: false
+#| eval: true
 
-df_self <- dplyr::filter(data_emotion, test_name == "BASC-3 SRP")
-bwu::cat_neuropsych_results(
-  data = df_self,
-  file = "_02-10_emotion_text.qmd"
-)
-
+# export text
 df_parent <- dplyr::filter(data_emotion, test_name == "BASC-3 PRS")
 bwu::cat_neuropsych_results(
   data = df_parent,
-  file = "_02-10_emotion_text.qmd"
+  file = "_02-10_emotion_parent_text.qmd"
 )
 ```
 
 ```{r}
-#| label: qtbl-emotion-self
-#| dev: tikz
-#| fig-process: pdf2png
-#| eval: true
+#| label: text-emotion-child
+#| cache: true
 #| include: false
-options(tikzDefaultEngine = "xetex")
+#| eval: false
 
-# vars
-pheno <- "emotion_self"
-source_note <- gt::md("_T_-Score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
-
-Personal Adjustment scores are reversed.")
-# fn_t_score <- gt::md("_T_-Score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
-table_name <- "table_emotion_self"
-vertical_padding <- 0
-grp_emotion <- list(
-  t_score = c("PAI", "BASC-3 SRP")
+# export text
+df_child <- dplyr::filter(data_emotion, test_name == "BASC-3 SRP")
+bwu::cat_neuropsych_results(
+  data = df_child,
+  file = "_02-10_emotion_child_text.qmd"
 )
-multiline <- FALSE
+```
 
-data_emotion_self <-
-  dplyr::filter(
-    data_emotion,
-    domain %in% c(
-      "Psychiatric Disorders",
-      "Personality Disorders",
-      "Substance Use",
-      "Behavioral/Emotional/Social",
-      "Emotional/Behavioral/Personality"
-    )
-  ) |>
-  dplyr::filter(test_name %in% c("PAI", "BASC-3 SRP")) |>
-  dplyr::arrange(absort) |>
-  dplyr::arrange(subdomain)
+```{r}
+#| label: text-emotion-teacher
+#| cache: true
+#| include: false
+#| eval: false
 
-library(gt)
-library(dplyr)
-library(glue)
-
-# # Define broad domain categories
-# broad_domains <- c("School Problems", "Internalizing Problems", "Inattention/Hyperactivity", "Emotional Symptoms Index", "Personal Adjustment")
-
-# # Create a new column to identify broad domains and subscales
-# data_emotion_self <- data_emotion_self |>
-#   dplyr::mutate(is_broad_domain = scale %in% broad_domains)
-
-bwu::tbl_gt(
-  data = data_emotion_self,
-  pheno = pheno,
-  table_name = table_name,
-  vertical_padding = vertical_padding,
-  source_note = source_note,
-  grp_t_score = grp_emotion[["t_score"]],
-  dynamic_grp = grp_emotion,
-  multiline = multiline
+# export text
+df_teacher <- dplyr::filter(data_emotion, test_name == "BASC-3 TRS")
+bwu::cat_neuropsych_results(
+  data = df_teacher,
+  file = "_02-10_emotion_teacher_text.qmd"
 )
 ```
 
@@ -209,22 +215,31 @@ bwu::tbl_gt(
 #| label: qtbl-emotion-parent
 #| dev: tikz
 #| fig-process: pdf2png
-#| eval: true
 #| include: false
+
+# Set the default engine for tikz to "xetex"
 options(tikzDefaultEngine = "xetex")
 
-# vars
-pheno <- "emotion_parent"
-source_note <- gt::md("_T_-Score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
-
-Adaptive Skills scores are reversed.")
+# Define the table name, vertical padding, and multiline setting
 table_name <- "table_emotion_parent"
 vertical_padding <- 0
-grp_emotion <- list(
-  t_score = c("BASC-3 PRS", "BASC-3 TRS")
-)
 multiline <- FALSE
+pheno <- "emotion_parent"
 
+# source note
+source_note <- gt::md("_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
+
+_Note_: Adaptive Skills scores are reversed.")
+
+# footnotes
+fn_t_score <- gt::md("_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
+
+# define the groupings for the table
+grp_emotion <- list(
+  t_score = c("BASC-3 PRS", "BASC-3 TRS", "BASC-3 SRP", "PAI", "MMPI-3")
+)
+
+# Extract the data for the table
 data_emotion_parent <-
   dplyr::filter(
     data_emotion,
@@ -232,6 +247,7 @@ data_emotion_parent <-
       "Psychiatric Disorders",
       "Personality Disorders",
       "Substance Use",
+      "Psychosocial Problems",
       "Behavioral/Emotional/Social",
       "Emotional/Behavioral/Personality"
     )
@@ -240,6 +256,7 @@ data_emotion_parent <-
   dplyr::arrange(absort) |>
   dplyr::arrange(subdomain)
 
+# Create the table using the tbl_gt function from the bwu library
 bwu::tbl_gt(
   data = data_emotion_parent,
   pheno = pheno,
@@ -253,67 +270,150 @@ bwu::tbl_gt(
 ```
 
 ```{r}
-#| label: fig-emotion-self
-#| fig-cap: "Mood/Self-Report"
+#| label: qtbl-emotion-child
+#| dev: tikz
+#| fig-process: pdf2png
 #| include: false
+#| eval: false
 
-# args
-pheno <- "emotion"
-df_self <-
-  dplyr::filter(data) |>
-  dplyr::filter(test_name == "BASC-3 SRP")
+# Set the default engine for tikz to "xetex"
+options(tikzDefaultEngine = "xetex")
 
-x <- df_self$z_mean_subdomain
-y <- df_self$subdomain
-colors <- NULL
-# return_plot <- TRUE
-return_plot <- Sys.getenv("RETURN_PLOT")
-filename <- "fig_emotion_self.svg"
+# Define the table name, vertical padding, and multiline setting
+table_name <- "table_emotion_child"
+vertical_padding <- 0
+multiline <- FALSE
+pheno <- "emotion_child"
 
-# Make dotplot
-bwu::dotplot(
-  data = df_self,
-  x = x,
-  y = y,
-  colors = colors,
-  return_plot = return_plot,
-  filename = filename
+# source note
+source_note <- gt::md("_T_-Score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
+
+_Note_: Personal Adjustment scores are reversed.")
+
+# footnotes
+fn_t_score <- gt::md("_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
+
+# define the groupings for the table
+grp_emotion <- list(
+  t_score = c("BASC-3 PRS", "BASC-3 TRS", "BASC-3 SRP", "PAI", "MMPI-3")
 )
 
+# Extract the data for the table
+data_emotion_child <-
+  dplyr::filter(
+    data_emotion,
+    domain %in% c(
+      "Psychiatric Disorders",
+      "Personality Disorders",
+      "Substance Use",
+      "Psychosocial Problems",
+      "Behavioral/Emotional/Social",
+      "Emotional/Behavioral/Personality"
+    )
+  ) |>
+  dplyr::filter(test_name %in% c("BASC-3 SRP", "PAI")) |>
+  dplyr::arrange(absort) |>
+  dplyr::arrange(subdomain)
 
-x2 <- df_self$z
-y2 <- df_self$scale
-colors <- NULL
-filename <- "fig_emotion_self2.svg"
-
-# Make dotplot
-bwu::dotplot(
-  data = df_self,
-  x = x2,
-  y = y2,
-  colors = colors,
-  return_plot = return_plot,
-  filename = filename
+# Create the table using the tbl_gt function from the bwu library
+bwu::tbl_gt(
+  data = data_emotion_child,
+  pheno = pheno,
+  table_name = table_name,
+  source_note = source_note,
+  grp_t_score = grp_emotion[["t_score"]],
+  dynamic_grp = grp_emotion,
+  vertical_padding = vertical_padding,
+  multiline = multiline
 )
 ```
 
 ```{r}
-#| label: fig-emotion-parent
-#| fig-cap: "Mood/Parent-Report"
+#| label: qtbl-emotion-teacher
+#| dev: tikz
+#| fig-process: pdf2png
 #| include: false
+#| eval: false
 
-# args
-pheno <- "emotion"
+# Set the default engine for tikz to "xetex"
+options(tikzDefaultEngine = "xetex")
+
+# Define the table name, vertical padding, and multiline setting
+table_name <- "table_emotion_teacher"
+vertical_padding <- 0
+multiline <- FALSE
+pheno <- "emotion_teacher"
+
+# source note
+source_note <- gt::md("_T_-Score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰].
+
+_Note_: Adaptive Skills scores are reversed.")
+
+# footnotes
+fn_t_score <- gt::md("_T_-score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
+
+# define the groupings for the table
+grp_emotion <- list(
+  t_score = c("BASC-3 PRS", "BASC-3 TRS", "BASC-3 SRP", "PAI", "MMPI-3")
+)
+
+# Extract the data for the table
+data_emotion_teacher <-
+  dplyr::filter(
+    data_emotion,
+    domain %in% c(
+      "Psychiatric Disorders",
+      "Personality Disorders",
+      "Substance Use",
+      "Psychosocial Problems",
+      "Behavioral/Emotional/Social",
+      "Emotional/Behavioral/Personality"
+    )
+  ) |>
+  dplyr::filter(test_name %in% c("BASC-3 TRS", "PAI")) |>
+  dplyr::arrange(absort) |>
+  dplyr::arrange(subdomain)
+
+# Suppress warnings from being converted to errors
+options(warn = 1) # Set warn to 1 to make warnings not halt execution
+
+# Create the table using the tbl_gt function from the bwu library
+bwu::tbl_gt(
+  data = data_emotion_teacher,
+  pheno = pheno,
+  table_name = table_name,
+  source_note = source_note,
+  grp_t_score = grp_emotion[["t_score"]],
+  dynamic_grp = grp_emotion,
+  vertical_padding = vertical_padding,
+  multiline = multiline
+)
+
+# Reset warning options to default if needed
+options(warn = 0) # Reset to default behavior
+```
+
+```{r}
+#| label: fig-emotion-parent
+#| include: false
+#| fig-cap: "Mood/Parent-Report"
+
+# df parent
 df_parent <-
   dplyr::filter(data) |>
   dplyr::filter(test_name == "BASC-3 PRS")
 
-x <- df_parent$z_mean_subdomain
-y <- df_parent$subdomain
+# Dotplot arguments
 colors <- NULL
-# return_plot <- TRUE
 return_plot <- Sys.getenv("RETURN_PLOT")
 filename <- "fig_emotion_parent.svg"
+
+# variables to plot
+x <- df_parent$z_mean_subdomain
+y <- df_parent$subdomain
+
+# Suppress warnings from being converted to errors
+options(warn = 1) # Set warn to 1 to make warnings not halt execution
 
 # Make dotplot
 bwu::dotplot(
@@ -322,106 +422,313 @@ bwu::dotplot(
   y = y,
   colors = colors,
   return_plot = return_plot,
-  filename = filename
+  filename = filename,
+  na.rm = TRUE
 )
 
-x2 <- df_parent$z
-y2 <- df_parent$scale
-colors <- NULL
-# return_plot <- TRUE
-return_plot <- Sys.getenv("RETURN_PLOT")
-filename <- "fig_emotion_parent2.svg"
+# Reset warning options to default if needed
+options(warn = 0) # Reset to default behavior
+```
+
+```{r}
+#| label: fig-emotion-parent-scale
+#| include: false
+#| fig-cap: "Mood/Parent-Report"
+
+# Better version, uses scales to get all the composites
+x <- df_parent$z
+y <- df_parent$scale
+filename <- "fig_emotion_parent_scale.svg"
+
+# Suppress warnings from being converted to errors
+options(warn = 1) # Set warn to 1 to make warnings not halt execution
 
 # Make dotplot
 bwu::dotplot(
   data = df_parent,
-  x = x2,
-  y = y2,
+  x = x,
+  y = y,
   colors = colors,
   return_plot = return_plot,
-  filename = filename
+  filename = filename,
+  na.rm = TRUE
 )
+
+# Reset warning options to default if needed
+options(warn = 0) # Reset to default behavior
 ```
 
-### PARENT RATINGS
+```{r}
+#| label: fig-emotion-child
+#| include: false
+#| fig-cap: "Mood/Child Self-Report"
 
+# df child
+df_child <-
+  dplyr::filter(data) |>
+  dplyr::filter(test_name == "BASC-3 SRP", "PAI")
+
+# `bwu` dotplot arguments
+colors <- NULL
+return_plot <- Sys.getenv("RETURN_PLOT")
+filename <- "fig_emotion_child.svg"
+
+# variables to plot
+x <- df_child$z_mean_subdomain
+y <- df_child$subdomain
+
+# Suppress warnings from being converted to errors
+options(warn = 1) # Set warn to 1 to make warnings not halt execution
+
+# make dotplot
+bwu::dotplot(
+  data = df_child,
+  x = x,
+  y = y,
+  colors = colors,
+  return_plot = return_plot,
+  filename = filename,
+  na.rm = TRUE
+)
+
+# Reset warning options to default if needed
+options(warn = 0) # Reset to default behavior
+```
+
+```{r}
+#| label: fig-emotion-child-scale
+#| include: false
+#| fig-cap: "Mood/Self-Report"
+
+# arguments
+filename <- "fig_emotion_child_scale.svg"
+x <- df_child$z
+y <- df_child$scale
+
+# Suppress warnings from being converted to errors
+options(warn = 1) # Set warn to 1 to make warnings not halt execution
+
+# Make dotplot
+bwu::dotplot(
+  data = df_child,
+  x = x,
+  y = y,
+  colors = colors,
+  return_plot = return_plot,
+  filename = filename,
+  na.rm = TRUE
+)
+
+# Reset warning options to default if needed
+options(warn = 0) # Reset to default behavior
+```
+
+```{r}
+#| label: fig-emotion-teacher
+#| include: false
+#| fig-cap: "Mood/Teacher-Report"
+
+# df teacher
+df_teacher <-
+  dplyr::filter(data) |>
+  dplyr::filter(test_name == "BASC-3 TRS")
+
+# Dotplot arguments
+colors <- NULL
+return_plot <- Sys.getenv("RETURN_PLOT")
+filename <- "fig_emotion_teacher.svg"
+
+# variables to plot
+x <- df_teacher$z_mean_subdomain
+y <- df_teacher$subdomain
+
+# Suppress warnings from being converted to errors
+options(warn = 1) # Set warn to 1 to make warnings not halt execution
+
+# Make dotplot
+bwu::dotplot(
+  data = df_teacher,
+  x = x,
+  y = y,
+  colors = colors,
+  return_plot = return_plot,
+  filename = filename,
+  na.rm = TRUE
+)
+
+# Reset warning options to default if needed
+options(warn = 0) # Reset to default behavior
+```
+
+```{r}
+#| label: fig-emotion-teacher-scale
+#| include: false
+#| fig-cap: "Mood/Teacher-Report"
+
+# Better version, uses scales to get all the composites
+x <- df_teacher$z
+y <- df_teacher$scale
+filename <- "fig_emotion_teacher_scale.svg"
+
+# Suppress warnings from being converted to errors
+options(warn = 1) # Set warn to 1 to make warnings not halt execution
+
+# Make dotplot
+bwu::dotplot(
+  data = df_teacher,
+  x = x,
+  y = y,
+  colors = colors,
+  return_plot = return_plot,
+  filename = filename,
+  na.rm = TRUE
+)
+
+# Reset warning options to default if needed
+options(warn = 0) # Reset to default behavior
+```
+
+### PARENT REPORT
 {{< include _02-10_emotion_parent_text.qmd >}}
 
 ```{=typst}
+// Define a function to create a domain with a title, a table, and a figure
 #let domain(title: none, file_qtbl, file_fig) = {
   let font = (font: "Merriweather", size: 0.7em)
   set text(..font)
   pad(top: 0.5em)[]
-    grid(
-      columns: (50%, 50%),
-      gutter: 8pt,
-        figure([#image(file_qtbl)],
-          caption: figure.caption(position: top, [#title]),
-          kind: "qtbl",
-          supplement: [Table],
-          ),
-        figure([#image(file_fig, width: auto)],
-          caption: figure.caption(position: bottom, [
-
-            The data presented here is based on {{< var observer >}}'s rating of {{< var first_name >}}'s behavior using the BASC-3 Parent Rating Scales form. Scale scores in the Clinically Significant range suggest a high level of impairment. Scores in the At-Risk range may identify a significant problem that may not be severe enough to require formal treatment, or may identify the potential of developing a problem that needs careful monitoring.
-            ]),
-          
-          placement: none,
-          kind: "image",
-          supplement: [Figure],
-          gap: 0.5em,
-        ),
-      )
-  }
-```
-
-```{=typst}
-#let title = "BASC-3 Parent Rating Scales"
-#let file_qtbl = "table_emotion_parent.png"
-#let file_fig = "fig_emotion_parent.svg"
-#domain(
-  title: [#title],
-  file_qtbl,
-  file_fig
+  grid(
+    columns: (50%, 50%),
+    gutter: 8pt,
+    figure(
+      [#image(file_qtbl)],
+      caption: figure.caption(position: top, [#title]),
+      kind: "qtbl",
+      supplement: [Table],
+    ),
+    figure(
+      [#image(file_fig, width: auto)],
+      caption: figure.caption(
+        position: bottom,
+        [
+          Mood/Parent Report. Parent reports of behavioral and emotional problems in children and adolescents.
+                  ],
+      ),
+      placement: none,
+      kind: "image",
+      supplement: [Figure],
+      gap: 0.5em,
+    ),
   )
+}
+```
+```{=typst}
+// Define the title of the domain
+#let title = "Behavioral/Emotional/Social"
+
+// Define the file name of the table
+#let file_qtbl = "table_emotion_parent.png"
+
+// Define the file name of the figure
+#let file_fig = "fig_emotion_parent.svg"
+
+// Call the 'domain' function with the specified title, table file name, and figure file name
+#domain(title: [#title], file_qtbl, file_fig)
 ```
 
-### SELF-REPORT
-
+### CHILD SELF-REPORT
 {{< include _02-10_emotion_child_text.qmd >}}
 
 ```{=typst}
+// Define a function to create a domain with a title, a table, and a figure
 #let domain(title: none, file_qtbl, file_fig) = {
   let font = (font: "Merriweather", size: 0.7em)
   set text(..font)
-    grid(
-      columns: (50%, 50%),
-      gutter: 8pt,
-        figure([#image(file_qtbl)],
-          caption: figure.caption(position: top, [#title]),
-          kind: "qtbl",
-          supplement: [Table],
-          ),
-        figure([#image(file_fig, width: auto)],
-          caption: figure.caption(position: bottom, [
-            The data presented here is based on {{< var first_name >}}'s self-reported ratings using the BASC-3 Self-Report of Personality form. Scale scores in the Clinically Significant range suggest a high level of impairment. Scores in the At-Risk range may identify a significant problem that may not be severe enough to require formal treatment, or may identify the potential of developing a problem that needs careful monitoring.
-            ]),
-          placement: none,
-          kind: "image",
-          supplement: [Figure],
-          gap: 0.5em,
-        ),
-      )
-  }
+  pad(top: 0.5em)[]
+  grid(
+    columns: (50%, 50%),
+    gutter: 8pt,
+    figure(
+      [#image(file_qtbl)],
+      caption: figure.caption(position: top, [#title]),
+      kind: "qtbl",
+      supplement: [Table],
+    ),
+    figure(
+      [#image(file_fig, width: auto)],
+      caption: figure.caption(
+        position: bottom,
+        [
+          Mood/Child Self-Report. Self report of behavioral, emotional, and social difficulties.
+          ],
+      ),
+      placement: none,
+      kind: "image",
+      supplement: [Figure],
+      gap: 0.5em,
+    ),
+  )
+}
+```
+```{=typst}
+// Define the title of the domain
+#let title = "Behavioral/Emotional/Social"
+
+// Define the file name of the table
+#let file_qtbl = "table_emotion_child.png"
+
+// Define the file name of the figure
+#let file_fig = "fig_emotion_child.svg"
+
+// Call the 'domain' function with the specified title, table file name, and figure file name
+#domain(title: [#title], file_qtbl, file_fig)
 ```
 
+### TEACHER REPORT
+
+{{< include _02-10_emotion_teacher_text.qmd >}}
+
 ```{=typst}
-#let title = "BASC-3 Self-Report of Personality"
-#let file_qtbl = "table_emotion_self.png"
-#let file_fig = "fig_emotion_self.svg"
-#domain(
-  title: [#title],
-  file_qtbl,
-  file_fig
+// Define a function to create a domain with a title, a table, and a figure
+#let domain(title: none, file_qtbl, file_fig) = {
+  let font = (font: "Merriweather", size: 0.7em)
+  set text(..font)
+  pad(top: 0.5em)[]
+  grid(
+    columns: (50%, 50%),
+    gutter: 8pt,
+    figure(
+      [#image(file_qtbl)],
+      caption: figure.caption(position: top, [#title]),
+      kind: "qtbl",
+      supplement: [Table],
+    ),
+    figure(
+      [#image(file_fig, width: auto)],
+      caption: figure.caption(
+        position: bottom,
+        [
+          Mood/Teacher Report. Teacher reports of behavioral, emotional, academic, and social difficulties.
+                  ],
+      ),
+      placement: none,
+      kind: "image",
+      supplement: [Figure],
+      gap: 0.5em,
+    ),
   )
+}
+```
+```{=typst}
+// Define the title of the domain
+#let title = "Behavioral/Emotional/Social"
+
+// Define the file name of the table
+#let file_qtbl = "table_emotion_teacher.png"
+
+// Define the file name of the figure
+#let file_fig = "fig_emotion_teacher.svg"
+
+// Call the 'domain' function with the specified title, table file name, and figure file name
+#domain(title: [#title], file_qtbl, file_fig)
 ```
