--- a/_02-01_iq.qmd
+++ b/_02-01_iq.qmd
@@ -17,27 +17,20 @@ pheno <- "iq"
 #| label: export-iq
 #| include: false
 #| eval: true
-# Load necessary libraries
-library(readr)
-library(dplyr)
-library(magrittr)
 
 # Read the CSV file into a data frame
-iq <- read_csv("neurocog.csv")
+iq <- readr::read_csv("neurocog.csv")
 
 # Filter the data frame to keep only rows where 'domain' equals 'domains'
-iq <- iq %>% filter(domain == domains)
-
-# Further filter the data frame to remove rows with NA in 'z_mean_domain'
-iq <- iq %>% filter(!is.na(z_mean_domain))
+iq <- iq |> dplyr::filter(domain == domains)
 
 # Select specific columns from the data frame
-iq <- iq %>% select(
-  scale, score, z, percentile, range, test_name,
+iq <- iq |> dplyr::select(
+  test, test_name, scale, raw_score, score, ci_95, percentile, range,
   domain, subdomain, narrow, pass, verbal, timed, description, result,
-  z_mean_domain, z_sd_domain, z_mean_subdomain,
+  z, z_mean_domain, z_sd_domain, z_mean_subdomain,
   z_sd_subdomain, z_mean_narrow, z_sd_narrow, z_mean_pass, z_sd_pass,
-  z_mean_verbal, z_sd_verbal, z_mean_timed, z_sd_timed
+  z_mean_verbal, z_sd_verbal, z_mean_timed, z_sd_timed, description, result
 )
 
 # Write the resulting data frame to a new CSV file
@@ -45,7 +38,7 @@ iq <- iq %>% select(
 # NA values are replaced with an empty string in the output file
 # Column names are included in the output file
 # If the file already exists, it is overwritten (not appended)
-write_csv(iq, paste0(pheno, ".csv"), na = "", col_names = TRUE, append = FALSE)
+readr::write_excel_csv(iq, paste0(pheno, ".csv"), na = "", col_names = TRUE, append = FALSE)
 ```
 
 ```{r}
@@ -53,74 +46,60 @@ write_csv(iq, paste0(pheno, ".csv"), na = "", col_names = TRUE, append = FALSE)
 #| include: false
 #| eval: true
 
-# Load the bwu library
-library(bwu)
-
-# Define the phenotype
-pheno <- "iq"
-
 # Read the data using the read_data function from the bwu library
 # The phenotype is specified by the 'pheno' variable
-data <- bwu::read_data(pheno = pheno)
+data <- iq
 
 # Define the scales of interest
 scales <- c(
+  "Auditory Working Memory (AWMI)",
+  "Cognitive Proficiency (CPI)",
+  "Crystallized Knowledge",
+  "Fluid Reasoning (FRI)",
+  "Fluid Reasoning",
   "Full Scale (FSIQ)",
+  "Full Scale IQ (FSIQ)",
   "General Ability (GAI)",
   "General Ability",
   "General Intelligence",
-  "Test of Premorbid Functioning",
-  "TOPF Standard Score",
-  "Word Reading",
-  "Crystallized Knowledge",
-  "Verbal Comprehension (VCI)",
-  "Verbal Comprehension",
-  "Vocabulary Acquisition (VAI)",
-  "Verbal/Language",
-  "Verbal Fluency",
-  "Fluid Reasoning (FRI)",
-  "Fluid Reasoning",
-  "Perceptual Reasoning",
-  "Perceptual Reasoning (PRI)",
-  "Nonverbal (NVI)",
-  "Visual Spatial (VSI)",
-  "Visual Perception/Construction",
-  "Memory",
-  "Learning Efficiency",
-  "Delayed Recall",
-  "Working Memory",
-  "Working Memory (WMI)",
-  "Auditory Working Memory (AWMI)",
-  "Processing Speed",
-  "Processing Speed (PSI)",
-  "Psychomotor Speed",
-  "Cognitive Efficiency",
-  "Attention/Executive",
-  "Attention",
-  "Attention Span",
-  "Attentional Fluency",
-  "Executive Function",
-  "Planning",
-  "Judgment",
-  "Academic Skills",
-  "Academic Fluency",
-  "Reading",
-  "Writing",
-  "Math",
-  "NAB Total Index",
+  "Global Neurocognitive Index (G)",
   "NAB Attention Index",
+  "NAB Executive Functions Index",
   "NAB Language Index",
   "NAB Memory Index",
   "NAB Spatial Index",
-  "NAB Executive Functions Index",
+  "NAB Total Index",
+  "Nonverbal (NVI)",
+  "Perceptual Reasoning (PRI)",
+  "Perceptual Reasoning",
+  "Processing Speed (PSI)",
+  "Processing Speed",
   "RBANS Total Index",
-  "Global Neurocognitive Index (G)"
+  "Test of Premorbid Functioning",
+  "TOPF Standard Score",
+  "Verbal Comprehension (VCI)",
+  "Verbal Comprehension",
+  "Visual Perception/Construction",
+  "Visual Spatial (VSI)",
+  "Vocabulary Acquisition (VAI)",
+  "Word Reading",
+  "Working Memory (WMI)",
+  "Working Memory"
 )
 
 # Filter the data using the filter_data function from the bwu library
 # The domain is specified by the 'domains' variable
 # The scale is specified by the 'scales' variable
 data_iq <- bwu::filter_data(data, domain = domains, scale = scales)
+```
+
+```{r}
+#| label: text-iq
+#| cache: true
+#| include: false
+
+# export text
+bwu::cat_neuropsych_results(data = data_iq, file = "_02-01_iq_text.qmd")
 ```
 
 ```{r}
@@ -131,53 +110,63 @@ data_iq <- bwu::filter_data(data, domain = domains, scale = scales)
 #| eval: true
 
 # Set the default engine for tikz to "xetex"
-options(tikzDefaltEngine = "xetex")
+options(tikzDefaultEngine = "xetex")
 
 # Define the scales to include
 include <- c(
-  "General Ability",
-  "General Ability (GAI)",
+  "Auditory Working Memory (AWMI)",
+  "Cognitive Proficiency (CPI)",
   "Crystallized Knowledge",
+  "Fluid Reasoning (FRI)",
   "Fluid Reasoning",
-  # "Cognitive Proficiency",
-  "Processing Speed",
-  "Working Memory",
-  "NAB Total Index",
+  "Full Scale (FSIQ)",
+  "Full Scale IQ (FSIQ)",
+  "General Ability (GAI)",
+  "General Ability",
+  "General Intelligence",
+  "Global Neurocognitive Index (G)",
   "NAB Attention Index",
+  "NAB Executive Functions Index",
   "NAB Language Index",
   "NAB Memory Index",
   "NAB Spatial Index",
-  "NAB Executive Functions Index"
+  "NAB Total Index",
+  "Nonverbal (NVI)",
+  "Perceptual Reasoning (PRI)",
+  "Perceptual Reasoning",
+  "Processing Speed (PSI)",
+  "Processing Speed",
+  "RBANS Total Index",
+  "Test of Premorbid Functioning",
+  "TOPF Standard Score",
+  "Verbal Comprehension (VCI)",
+  "Verbal Comprehension",
+  "Visual Perception/Construction",
+  "Visual Spatial (VSI)",
+  "Vocabulary Acquisition (VAI)",
+  "Word Reading",
+  "Working Memory (WMI)",
+  "Working Memory"
 )
 
 # Filter the data to include only the specified scales
 data_iq <- dplyr::filter(data_iq, scale %in% include)
 
-# Define the variables to include in the output
-variables <- c(
-  "test", "test_name", "scale", "score", "z", "percentile", "range", "ci_95", "domain",
-  "subdomain", "narrow", "test_type", "result"
-)
-
-# Select the specified variables from the data
-iq <- data_iq |> dplyr::select(all_of(variables))
-
-# Write the data to an Excel CSV file
-readr::write_excel_csv(iq, "iq.csv", na = "", col_names = TRUE, append = FALSE)
-
 # Define the table name, vertical padding, and multiline setting
+pheno <- "iq"
 table_name <- "table_iq"
 vertical_padding <- 0
 multiline <- TRUE
 
-# Define the source note
-source_note <- gt::md("Standard Score: Mean = 100 [50th‰], SD ± 15 [16th‰, 84th‰]")
+# footnotes
+fn_standard_score <- gt::md("Index Score: Mean = 100 [50th‰], SD ± 15 [16th‰, 84th‰]")
+fn_t_score <- gt::md("_T_-Score: Mean = 50 [50th‰], SD ± 10 [16th‰, 84th‰]")
 
 # Define the groups for the table
 grp_iq <- list(
   standard_score = c(
     "Composite Scores", "Test of Premorbid Functioning", "WAIS-IV", "WAIS-4",
-    "WASI-2", "WISC-5", "WRAT-5", "KTEA-3", "NAB", "RBANS"
+    "WASI-2", "WISC-5", "WISC-V", "WRAT-5", "KTEA-3", "NAB", "NAB-S", "RBANS", "WPPSI-IV"
   )
 )
 
@@ -186,19 +175,14 @@ bwu::tbl_gt(
   data = data_iq,
   pheno = pheno,
   table_name = table_name,
-  source_note = source_note,
-  grp_standard_score = grp_iq[["standard_score"]],
-  dynamic_grp = grp_iq,
   vertical_padding = vertical_padding,
+  fn_standard_score = fn_standard_score,
+  fn_t_score = fn_t_score,
+  grp_standard_score = grp_iq[["standard_score"]],
+  grp_t_score = grp_iq[["t_score"]],
+  dynamic_grp = grp_iq,
   multiline = multiline
 )
-```
-
-```{r}
-#| label: text-iq
-#| cache: true
-#| include: false
-bwu::cat_neuropsych_results(data = data_iq, file = "_02-01_iq_text.qmd")
 ```
 
 ```{r}
@@ -206,25 +190,23 @@ bwu::cat_neuropsych_results(data = data_iq, file = "_02-01_iq_text.qmd")
 #| include: false
 #| fig-cap: "_Premorbid Ability_ is an estimate of an individual's intellectual functioning prior to known or suspected onset of brain disease or dysfunction. _General Ability_ is the overall skill to reason, solve problems, and gain useful knowledge. _Crystallized Knowledge_ involves understanding the world through language and reasoning. _Fluid Reasoning_ is the logical analysis and solution of new problems, identifying underlying patterns, and applying logic."
 
-# Define the scales to keep
-keep <- c("General Ability", "Crystallized Knowledge", "Fluid Reasoning")
-
-# Filter the data to keep only the specified scales
-data_iq <- dplyr::filter(data_iq, scale %in% keep)
 
 # Define the x and y variables for the dotplot
 x <- data_iq$z
 y <- data_iq$scale
 
-# Define the colors for the dotplot (NULL means use default colors)
+# plot args
 colors <- NULL
-
-# Define whether to return the plot or save it to a file
-# This is determined by the "RETURN_PLOT" environment variable
+# return_plot <- TRUE
 return_plot <- Sys.getenv("RETURN_PLOT")
 
 # Define the filename for the plot
 filename <- "fig_iq.svg"
+
+# Filter the data to keep only the specified scales
+# Define the scales to keep
+# keep <- c("General Ability", "Crystallized Knowledge", "Fluid Reasoning")
+# data_iq <- dplyr::filter(data_iq, scale %in% keep)
 
 # Create the dotplot using the dotplot function from the bwu library
 bwu::dotplot(
@@ -233,10 +215,10 @@ bwu::dotplot(
   y = y,
   colors = colors,
   return_plot = return_plot,
-  filename = filename
+  filename = filename,
+  na.rm = TRUE
 )
 ```
-
 
 ```{=typst}
 // Define a function to create a domain with a title, a table, and a figure
@@ -278,7 +260,6 @@ bwu::dotplot(
   )
 }
 ```
-
 ```{=typst}
 // Define the title of the domain
 #let title = "General Cognitive Ability"
@@ -293,4 +274,3 @@ bwu::dotplot(
 // The title is appended with ' Index Scores'
 #domain(title: [#title Index Scores], file_qtbl, file_fig)
 ```
-
