--- a/_02-11_adaptive.qmd
+++ b/_02-11_adaptive.qmd
@@ -1,103 +1,188 @@
-## Adaptive Functioning
+## Adaptive (#sec-adaptive)
 
 {{< include _02-11_adaptive_text.qmd >}}
 
 ```{r}
+#| label: setup-adaptive
+#| include: false
+
+domains <- c("Adaptive Functioning")
+
+pheno <- "adaptive"
+```
+
+```{r}
+#| label: export-adaptive
+#| include: false
+
+# Read the CSV file into a data frame
+adaptive <- readr::read_csv("neurobehav.csv")
+
+# Filter the data frame based on certain conditions
+# Keep only the rows where 'domain' equals 'domains' and 'z_mean_domain' is not NA
+adaptive <- adaptive |>
+  dplyr::filter(domain == domains)
+
+# Select specific columns from the data frame
+adaptive <- adaptive |>
+  dplyr::select(
+    test,
+    test_name,
+    scale,
+    raw_score,
+    score,
+    ci_95,
+    percentile,
+    range,
+    domain,
+    subdomain,
+    narrow,
+    pass,
+    verbal,
+    timed,
+    description,
+    result,
+    z,
+    z_mean_domain,
+    z_sd_domain,
+    z_mean_subdomain,
+    z_sd_subdomain,
+    z_mean_narrow,
+    z_sd_narrow
+  )
+
+# Write the 'adaptive' data frame to a CSV file
+# The file name is derived from the 'pheno' variable
+readr::write_excel_csv(adaptive, paste0(pheno, ".csv"), na = "", col_names = TRUE, append = FALSE)
+```
+
+```{r}
 #| label: data-adaptive
-library(tidyverse)
-library(gt)
-library(gtExtras)
-library(glue)
-library(bwu)
-data <- bwu::read_data(pheno = "adaptive")
-domains <- c("Adaptive")
+#| include: false
+
+# Read and filter the data
+data <- adaptive
+
+# Define the scales of interest
 scales <- c(
-  "General Adaptive Composite",
-  "Conceptual Skills Index",
+  "General Adaptive Composite (GAC)",
+  "Conceptual",
   "Communication",
-  "Functional Academics",
+  "Functional Pre-Academics",
   "Self-Direction",
-  "adaptive Skills Index",
+  "Adaptive Skills Index",
   "Leisure",
-  "adaptive",
-  "Practical Skills Index",
+  "Social Index",
+  "Social",
+  "Adaptive",
+  "Practical",
   "Community Use",
   "School Living",
   "Home Living",
   "Health and Safety",
   "Self-Care",
+  "Motor",
+  "General Adaptive Composite",
+  "Conceptual Skills Index",
+  "Functional Academics",
+  "Practical Skills Index",
   "Work"
 )
-data <- bwu::filter_data(data, domain = domains, scale = scales)
+# Filter the data using the filter_data function from the bwu library
+# The domain is specified by the 'domains' variable
+# The scale is specified by the 'scales' variable
+data_adaptive <- bwu::filter_data(data, domain = domains, scale = scales)
 ```
 
 ```{r}
 #| label: text-adaptive
 #| cache: true
-bwu::cat_neuropsych_results(data, file = "_02-11_adaptive_text.qmd")
+#| include: false
+
+# Generate the text for the adaptive domain
+bwu::cat_neuropsych_results(data = data_adaptive, file = "_02-11_adaptive_text.qmd")
 ```
 
 ```{r}
 #| label: qtbl-adaptive
 #| dev: tikz
 #| fig-process: pdf2png
+#| include: false
+
+# Set the default engine for tikz to "xetex"
 options(tikzDefaultEngine = "xetex")
 
-# footnotes
-fn_scaled_score <- gt::md("Scaled Score: Mean = 10 [50th‰], SD ± 3 [16th‰, 84th‰]")
-fn_standard_score <- gt::md("Index Score: Mean = 100 [50th‰], SD ± 15 [16th‰, 84th‰]")
-
-pheno <- "adaptive"
+# Define the table name, vertical padding, and multiline setting
 table_name <- "table_adaptive"
-
-grp_adaptive <- list(
-  standard_score = c("ABAS-3"),
-  scaled_score = c("ABAS-3")
-)
-vertical_padding <- 0.05
+vertical_padding <- 0
 multiline <- TRUE
 
-bwu::tbl_gt(data,
+# Define the source note
+fn_scaled_score <- gt::md("Scaled score: Mean = 10 [50th‰], SD ± 3 [16th‰, 84th‰]")
+fn_standard_score <- gt::md("Index score: Mean = 100 [50th‰], SD ± 15 [16th‰, 84th‰]")
+
+# Define the groups for the table
+grp_adaptive <- list(
+  standard_score = c(
+    "ABAS-3 Parent", "ABAS-3", "ABAS-3 Teacher"
+  ),
+  scaled_score = c(
+    "ABAS-3 Parent", "ABAS-3", "ABAS-3 Teacher"
+  )
+)
+
+# Create the table using the tbl_gt function from the bwu library
+bwu::tbl_gt(
+  data = data_adaptive,
   pheno = pheno,
   table_name = table_name,
-  fn_scaled_score = fn_scaled_score,
-  fn_standard_score = fn_standard_score,
-  grp_scaled_score = grp_adaptive[["scaled_score"]],
-  grp_standard_score = grp_adaptive[["standard_score"]],
-  dynamic_grp = grp_adaptive,
   vertical_padding = vertical_padding,
+  fn_standard_score = fn_standard_score,
+  fn_scaled_score = fn_scaled_score,
+  grp_standard_score = grp_adaptive[["standard_score"]],
+  grp_scaled_score = grp_adaptive[["scaled_score"]],
+  dynamic_grp = grp_adaptive,
   multiline = multiline
 )
 ```
 
 ```{r}
 #| label: fig-adaptive
+#| include: false
 #| fig-cap: "Adaptive functioning is a broad term that refers to the collection of conceptual, social, and practical skills that enable individuals to function independently and meet the demands of everyday life. These skills include things like communication, self-care, home living, social skills, and community use."
 
-# Arguments
-adaptive <- dplyr::filter(data, !is.na(percentile))
-data <- adaptive
-x <- data$z_mean_narrow
-y <- data$narrow
+# Dotplot args
 colors <- NULL
-# return_plot <- TRUE
 return_plot <- Sys.getenv("RETURN_PLOT")
 filename <- "fig_adaptive.svg"
 
+# vars to plot
+x <- data_adaptive$z_mean_narrow
+y <- data_adaptive$narrow
+
+# Suppress warnings from being converted to errors
+options(warn = 1) # Set warn to 1 to make warnings not halt execution
+
+# Create the dotplot using the dotplot function from the bwu library
 bwu::dotplot(
-  data = data,
+  data = data_adaptive,
   x = x,
   y = y,
   colors = colors,
   return_plot = return_plot,
-  filename = filename
+  filename = filename,
+  na.rm = TRUE
 )
+
+# Reset warning options to default if needed
+options(warn = 0) # Reset to default behavior
 ```
 
 ```{=typst}
 #let domain(title: none, file_qtbl, file_fig) = {
   let font = (font: "Merriweather", size: 0.7em)
   set text(..font)
+  pad(top: 0.5em)[]
     grid(
       columns: (50%, 50%),
       gutter: 8pt,
@@ -106,27 +191,25 @@ bwu::dotplot(
           kind: "qtbl",
           supplement: [Table],
           ),
-        figure([#image(file_fig, width: auto)],
+        figure([#image(file_fig)],
           caption: figure.caption(position: bottom, [
             Adaptive functioning is a broad term that refers to the collection of conceptual, social, and practical skills that enable individuals to function independently and meet the demands of everyday life. These skills include things like communication, self-care, home living, social skills, and community use.
             ]),
-          caption-pos: bottom,
           placement: none,
           kind: "image",
           supplement: [Figure],
           gap: 0.5em,
-        ),
-      )
-  }
+          ),
+        )
+    }
 ```
-
 ```{=typst}
-#let title = "Adaptive"
+#let title = "Adaptive Functioning"
 #let file_qtbl = "table_adaptive.png"
-#let file_fig = "_02-11_adaptive_files/figure-typst/fig-adaptive-1.svg"
+#let file_fig = "fig_adaptive.svg"
 #domain(
-  title: [#title Test Scores],
+  title: [#title Scores],
   file_qtbl,
   file_fig
-  )
+)
 ```
